ArrayConvertable trait added && SubscriberDTO, UsageDTO added && UsageService added && api middleware force-json added && api routes updated && SubscriberService updated
